<resources>
    <string name="app_name">SmartTasker</string>
    <string name="login">Log in</string>
    <string name="register">Create account</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email (optional)</string>
    <string name="go_to_register">Need an account? Register</string>
    <string name="go_to_login">Have an account? Log in</string>
    <string name="tasks_title">My tasks</string>
    <string name="add_task">Add task</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="title_hint">Title</string>
    <string name="description_hint">Description</string>
    <string name="mark_complete">Mark complete</string>
    <string name="loading">Loading…</string>
    <string name="error_generic">Something went wrong. Try again.</string>
    <string name="logout">Log out</string>
    <string name="edit_task">Edit task</string>
    <string name="new_task">New task</string>
</resources>
